k8s/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
  namespace: ameen2607-dev
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
