k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-app-route
  namespace: ameen2607-dev
spec:
  to:
    kind: Service
    name: api-app-service
  port:
    targetPort: 5000
  tls:
    termination: edge
